resources/grafana-service/overlays/dev/grafana-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: dashboards  # Adjust if your Prometheus is in a different namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # This should match the IngressClass for NGINX
  rules:
  - host: grafana.local.m-mobility.com  # Replace with your domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-grafana
            port:
              number: 80
